--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Figuras Personalizadas</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -29,71 +29,71 @@
                 <div class="producto-grid" id="grid-juegos">
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/robot_frente.jpg" alt="Miniatura hecha a mano de un robot" class="img-frente">
-                            <img src="/resuorces/robot_atras.jpg" alt="Miniatura hecha a mano de un robot" class="img-detras">
+                            <img src="/resources/robot_frente.jpg" alt="Miniatura hecha a mano de un robot" class="img-frente">
+                            <img src="/resources/robot_atras.jpg" alt="Miniatura hecha a mano de un robot" class="img-detras">
                         </div>
                         <p>Robot Enano</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/esqueletos_frente.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-frente">
-                            <img src="/resuorces/esqueletos_atras.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-detras">
+                            <img src="/resources/esqueletos_frente.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-frente">
+                            <img src="/resources/esqueletos_atras.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-detras">
                         </div>
                         <p>Esqueletos Guerreros</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/arania_frente.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-frente">
-                            <img src="/resuorces/arania_atras.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-detras">
+                            <img src="/resources/arania_frente.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-frente">
+                            <img src="/resources/arania_atras.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-detras">
                         </div>
                         <p>Arañas Gigantes</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/slimes_frente.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-frente">
-                            <img src="/resuorces/slimes_atras.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-detras">
+                            <img src="/resources/slimes_frente.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-frente">
+                            <img src="/resources/slimes_atras.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-detras">
                         </div>
                         <p>Ochre Jelly</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/golem_frente.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-frente">
-                            <img src="/resuorces/golem_atras.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-detras">
+                            <img src="/resources/golem_frente.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-frente">
+                            <img src="/resources/golem_atras.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-detras">
                         </div>
                         <p>Golem de Roca</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/dragon_frente.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-frente">
-                            <img src="/resuorces/dragon_atras.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-detras">
+                            <img src="/resources/dragon_frente.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-frente">
+                            <img src="/resources/dragon_atras.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-detras">
                         </div>
                         <p>Dragón de Hielo</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/varios_frente.jpg" alt="Miniaturas variadas hechas a mano" class="img-frente">
-                            <img src="/resuorces/varios_detras.jpg" alt="Miniaturas variadas hechas a mano" class="img-detras">
+                            <img src="/resources/varios_frente.jpg" alt="Miniaturas variadas hechas a mano" class="img-frente">
+                            <img src="/resources/varios_detras.jpg" alt="Miniaturas variadas hechas a mano" class="img-detras">
                         </div>
                         <p>Minis Variadas</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/aracne_frente.jpg" alt="Miniatura hecha a mano de una aracne" class="img-frente">
-                            <img src="/resuorces/aracne_detras.jpg" alt="Miniatura hecha a mano de una aracne" class="img-detras">
+                            <img src="/resources/aracne_frente.jpg" alt="Miniatura hecha a mano de una aracne" class="img-frente">
+                            <img src="/resources/aracne_detras.jpg" alt="Miniatura hecha a mano de una aracne" class="img-detras">
                         </div>
                         <p>Aracne (Proximamente)</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/porPintar_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
-                            <img src="/resuorces/porPintar_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
+                            <img src="/resources/porPintar_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
+                            <img src="/resources/porPintar_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
                         </div>
                         <p>Minis por Pintar 1</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resuorces/porPintar2_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
-                            <img src="/resuorces/porPintar2_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
+                            <img src="/resources/porPintar2_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
+                            <img src="/resources/porPintar2_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
                         </div>
                         <p>Minis por Pintar 2</p>
                     </div>
@@ -110,42 +110,42 @@
                 <div class="producto-grid" id="grid-decoracion">
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resuorces/Mirko_frente.jpg" alt="Figura de Mirko por pintar" class="img-frente">
-                            <img src="/resuorces/Mirko_atras.jpg" alt="Figura de Mirko por pintar" class="img-detras">
+                            <img src="/resources/Mirko_frente.jpg" alt="Figura de Mirko por pintar" class="img-frente">
+                            <img src="/resources/Mirko_atras.jpg" alt="Figura de Mirko por pintar" class="img-detras">
                         </div>
                         <p>Mirko (Proximamente)</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resuorces/ironFist_frente.jpg" alt="Figura de Iron Fist" class="img-frente">
+                            <img src="/resources/ironFist_frente.jpg" alt="Figura de Iron Fist" class="img-frente">
                         </div>
                         <p>Iron Fist</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resuorces/goku_frente.jpg" alt="Figura de Goku niño" class="img-frente">
-                            <img src="/resuorces/goku_atras.jpg" alt="Figura de Goku niño" class="img-detras">
+                            <img src="/resources/goku_frente.jpg" alt="Figura de Goku niño" class="img-frente">
+                            <img src="/resources/goku_atras.jpg" alt="Figura de Goku niño" class="img-detras">
                         </div>
                         <p>Goku Niño</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resuorces/Rias_frente.jpg" alt="Figura de Rias Gremory" class="img-frente">
-                            <img src="/resuorces/Rias_atras.jpg" alt="Figura de Rias Gremory" class="img-detras">
+                            <img src="/resources/Rias_frente.jpg" alt="Figura de Rias Gremory" class="img-frente">
+                            <img src="/resources/Rias_atras.jpg" alt="Figura de Rias Gremory" class="img-detras">
                         </div>
                         <p>Rias Gremory</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resuorces/Miku_frente.jpg" alt="Figura de Hatsune Miku" class="img-frente">
-                            <img src="/resuorces/Miku_atras.jpg" alt="Figura de Hatsune Miku" class="img-detras">
+                            <img src="/resources/Miku_frente.jpg" alt="Figura de Hatsune Miku" class="img-frente">
+                            <img src="/resources/Miku_atras.jpg" alt="Figura de Hatsune Miku" class="img-detras">
                         </div>
                         <p>Hatsune Miku</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resuorces/MikuRosa_frente.jpg" alt="Figura de Miku rosa" class="img-frente">
-                            <img src="/resuorces/MikuRosa_atras.jpg" alt="Figura de Miku rosa" class="img-detras">
+                            <img src="/resources/MikuRosa_frente.jpg" alt="Figura de Miku rosa" class="img-frente">
+                            <img src="/resources/MikuRosa_atras.jpg" alt="Figura de Miku rosa" class="img-detras">
                         </div>
                         <p>Miku Rosa</p>
                     </div>
@@ -216,6 +216,6 @@
         <p>&copy; 2024 Tienda de Figuras Personalizadas. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="/js/scripts.js" defer></script>
+    <script src="js/scripts.js" defer></script>
 </body>
 </html>
