fix resources path

--- a/index.html
+++ b/index.html
@@ -29,71 +29,71 @@
                 <div class="producto-grid" id="grid-juegos">
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/robot_frente.jpg" alt="Miniatura hecha a mano de un robot" class="img-frente">
-                            <img src="/resources/robot_atras.jpg" alt="Miniatura hecha a mano de un robot" class="img-detras">
+                            <img src="resources/robot_frente.jpg" alt="Miniatura hecha a mano de un robot" class="img-frente">
+                            <img src="resources/robot_atras.jpg" alt="Miniatura hecha a mano de un robot" class="img-detras">
                         </div>
                         <p>Robot Enano</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/esqueletos_frente.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-frente">
-                            <img src="/resources/esqueletos_atras.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-detras">
+                            <img src="resources/esqueletos_frente.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-frente">
+                            <img src="resources/esqueletos_atras.jpg" alt="Miniaturas hechas a mano de esqueletos" class="img-detras">
                         </div>
                         <p>Esqueletos Guerreros</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/arania_frente.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-frente">
-                            <img src="/resources/arania_atras.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-detras">
+                            <img src="resources/arania_frente.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-frente">
+                            <img src="resources/arania_atras.jpg" alt="Miniaturas hechas a mano de arañas gigantes" class="img-detras">
                         </div>
                         <p>Arañas Gigantes</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/slimes_frente.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-frente">
-                            <img src="/resources/slimes_atras.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-detras">
+                            <img src="resources/slimes_frente.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-frente">
+                            <img src="resources/slimes_atras.jpg" alt="Miniaturas hechas a mano de slimes ocre" class="img-detras">
                         </div>
                         <p>Ochre Jelly</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/golem_frente.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-frente">
-                            <img src="/resources/golem_atras.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-detras">
+                            <img src="resources/golem_frente.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-frente">
+                            <img src="resources/golem_atras.jpg" alt="Miniatura hecha a mano de un golem de roca" class="img-detras">
                         </div>
                         <p>Golem de Roca</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/dragon_frente.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-frente">
-                            <img src="/resources/dragon_atras.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-detras">
+                            <img src="resources/dragon_frente.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-frente">
+                            <img src="resources/dragon_atras.jpg" alt="Miniatura hecha a mano de un dragón de hielo" class="img-detras">
                         </div>
                         <p>Dragón de Hielo</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/varios_frente.jpg" alt="Miniaturas variadas hechas a mano" class="img-frente">
-                            <img src="/resources/varios_detras.jpg" alt="Miniaturas variadas hechas a mano" class="img-detras">
+                            <img src="resources/varios_frente.jpg" alt="Miniaturas variadas hechas a mano" class="img-frente">
+                            <img src="resources/varios_detras.jpg" alt="Miniaturas variadas hechas a mano" class="img-detras">
                         </div>
                         <p>Minis Variadas</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/aracne_frente.jpg" alt="Miniatura hecha a mano de una aracne" class="img-frente">
-                            <img src="/resources/aracne_detras.jpg" alt="Miniatura hecha a mano de una aracne" class="img-detras">
+                            <img src="resources/aracne_frente.jpg" alt="Miniatura hecha a mano de una aracne" class="img-frente">
+                            <img src="resources/aracne_detras.jpg" alt="Miniatura hecha a mano de una aracne" class="img-detras">
                         </div>
                         <p>Aracne (Proximamente)</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/porPintar_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
-                            <img src="/resources/porPintar_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
+                            <img src="resources/porPintar_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
+                            <img src="resources/porPintar_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
                         </div>
                         <p>Minis por Pintar 1</p>
                     </div>
                     <div class="producto-item juegos">
                         <div class="images-change">
-                            <img src="/resources/porPintar2_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
-                            <img src="/resources/porPintar2_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
+                            <img src="resources/porPintar2_frente.jpg" alt="Miniaturas variadas para pintar" class="img-frente">
+                            <img src="resources/porPintar2_atras.jpg" alt="Miniaturas variadas para pintar" class="img-detras">
                         </div>
                         <p>Minis por Pintar 2</p>
                     </div>
@@ -110,42 +110,42 @@
                 <div class="producto-grid" id="grid-decoracion">
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resources/Mirko_frente.jpg" alt="Figura de Mirko por pintar" class="img-frente">
-                            <img src="/resources/Mirko_atras.jpg" alt="Figura de Mirko por pintar" class="img-detras">
+                            <img src="resources/Mirko_frente.jpg" alt="Figura de Mirko por pintar" class="img-frente">
+                            <img src="resources/Mirko_atras.jpg" alt="Figura de Mirko por pintar" class="img-detras">
                         </div>
                         <p>Mirko (Proximamente)</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resources/ironFist_frente.jpg" alt="Figura de Iron Fist" class="img-frente">
+                            <img src="resources/ironFist_frente.jpg" alt="Figura de Iron Fist" class="img-frente">
                         </div>
                         <p>Iron Fist</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resources/goku_frente.jpg" alt="Figura de Goku niño" class="img-frente">
-                            <img src="/resources/goku_atras.jpg" alt="Figura de Goku niño" class="img-detras">
+                            <img src="resources/goku_frente.jpg" alt="Figura de Goku niño" class="img-frente">
+                            <img src="resources/goku_atras.jpg" alt="Figura de Goku niño" class="img-detras">
                         </div>
                         <p>Goku Niño</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resources/Rias_frente.jpg" alt="Figura de Rias Gremory" class="img-frente">
-                            <img src="/resources/Rias_atras.jpg" alt="Figura de Rias Gremory" class="img-detras">
+                            <img src="resources/Rias_frente.jpg" alt="Figura de Rias Gremory" class="img-frente">
+                            <img src="resources/Rias_atras.jpg" alt="Figura de Rias Gremory" class="img-detras">
                         </div>
                         <p>Rias Gremory</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resources/Miku_frente.jpg" alt="Figura de Hatsune Miku" class="img-frente">
-                            <img src="/resources/Miku_atras.jpg" alt="Figura de Hatsune Miku" class="img-detras">
+                            <img src="resources/Miku_frente.jpg" alt="Figura de Hatsune Miku" class="img-frente">
+                            <img src="resources/Miku_atras.jpg" alt="Figura de Hatsune Miku" class="img-detras">
                         </div>
                         <p>Hatsune Miku</p>
                     </div>
                     <div class="producto-item decoracion">
                         <div class="images-change">
-                            <img src="/resources/MikuRosa_frente.jpg" alt="Figura de Miku rosa" class="img-frente">
-                            <img src="/resources/MikuRosa_atras.jpg" alt="Figura de Miku rosa" class="img-detras">
+                            <img src="resources/MikuRosa_frente.jpg" alt="Figura de Miku rosa" class="img-frente">
+                            <img src="resources/MikuRosa_atras.jpg" alt="Figura de Miku rosa" class="img-detras">
                         </div>
                         <p>Miku Rosa</p>
                     </div>
