add mejora estetica y funcion de botones

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Figuras Personalizadas</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap">
+
 </head>
 
 <body>
@@ -15,7 +17,7 @@
     <section id="video">
         <h2>Conoce Nuestros Productos</h2>
         <div class="video-container">
-            <iframe width="890" height="500" src="https://www.youtube.com/embed/sUxoRlQ5crc?si=GlUBNSPGzKmN4nSj"
+            <iframe width="890" height="500" src="https://www.youtube.com/embed/kFgKYzoRTlw?si=5I15WtBKHrtAp5UN"
         title="Video promocional de las figuras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
@@ -164,46 +166,46 @@
                 <thead>
                     <tr>
                         <th>Producto</th>
-                        <th>Tamaño</th>
+                        <th>Detalles</th>
                         <th>Precio</th>
                         <th>Material</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Miniatura de Juego de Mesa A</td>
-                        <td>Pequeño (30mm)</td>
+                        <td>Miniatura de Juego de Mesa</td>
+                        <td>Tamaño pequeño menor a 35mm</td>
+                        <td>$5</td>
+                        <td>Materiales reciclados (carton, plastico, espuma flex)</td>
+                    </tr>
+                    <tr>
+                        <td>Miniatura de Juego de Mesa</td>
+                        <td>Tamaño mediano entre 35mm a 50mm</td>
+                        <td>$10</td>
+                        <td>Materiales reciclados (carton, plastico, espuma flex)</td>
+                    </tr>
+                    <tr>
+                        <td>Miniatura de Juego de Mesa</td>
+                        <td>Tamaño grande mayor a 50mm</td>
+                        <td>$15</td>
+                        <td>Materiales reciclados (carton, plastico, espuma flex)</td>
+                    </tr>
+                    <tr>
+                        <td>Figura de Decoración</td>
+                        <td>Figura pintada a mano</td>
                         <td>$20</td>
-                        <td>Resina</td>
+                        <td>Plastico impreso en 3D, Arcilla, Cerámica</td>
                     </tr>
                     <tr>
-                        <td>Miniatura de Juego de Mesa B</td>
-                        <td>Mediano (42mm)</td>
+                        <td>Figura de Decoración</td>
+                        <td>Figura hecha y pintada a mano</td>
                         <td>$30</td>
-                        <td>Resina</td>
+                        <td>Arcilla, masilla epóxica</td>
                     </tr>
                     <tr>
-                        <td>Miniatura de Juego de Mesa C</td>
-                        <td>Grande (50mm)</td>
-                        <td>$40</td>
-                        <td>Resina</td>
-                    </tr>
-                    <tr>
-                        <td>Figura de Decoración A</td>
-                        <td>Pequeño</td>
-                        <td>$50</td>
-                        <td>Resina</td>
-                    </tr>
-                    <tr>
-                        <td>Figura de Decoración B</td>
-                        <td>Mediano</td>
-                        <td>$70</td>
-                        <td>Plástico</td>
-                    </tr>
-                    <tr>
-                        <td>Figura de Decoración C</td>
-                        <td>Grande</td>
-                        <td>$100</td>
+                        <td>Figura de Decoración</td>
+                        <td>Figura segunda mano retocada</td>
+                        <td>$20</td>
                         <td>Plástico</td>
                     </tr>
                 </tbody>
