--- a/index.html
+++ b/index.html
@@ -218,6 +218,18 @@
         <p>&copy; 2024 Tienda de Figuras Personalizadas. Todos los derechos reservados.</p>
     </footer>
 
+        <!-- Modal -->
+    <div id="producto-modal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2 id="modal-producto-nombre"></h2>
+            <img id="modal-producto-imagen" src="" alt="Imagen del producto">
+            <p id="modal-producto-descripcion"></p>
+            <p id="modal-producto-precio"></p>
+        </div>
+    </div>
+
+
     <script src="js/scripts.js" defer></script>
 </body>
 </html>
