--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="video">
         <h2 style="color: white;" tabindex="0">Conoce Nuestros Productos</h2>
         <div class="video-container">
-            <iframe width="890" height="500" src="https://epnecuador-my.sharepoint.com/:v:/g/personal/daniel_mera_epn_edu_ec/EYW9J0_dK5JFnh7n3RaYTr4Bd-2KSrfb7QY6873LZBmHCw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=6YJXRI"
+            <iframe width="890" height="500" src="https://youtu.be/Fz-duxcaA2U"
         title="Video promocional de las figuras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="0"></iframe>
         </div>
     </section>
