fix youtube video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="video">
         <h2 style="color: white;" tabindex="0">Conoce Nuestros Productos</h2>
         <div class="video-container">
-            <iframe width="890" height="500" src="https://youtu.be/Fz-duxcaA2U"
+            <iframe width="890" height="500" src="https://www.youtube.com/embed/Fz-duxcaA2U?si=81ZcOBjkjHruj5Xz"
         title="Video promocional de las figuras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="0"></iframe>
         </div>
     </section>
