add autor section

--- a/index.html
+++ b/index.html
@@ -210,6 +210,18 @@
         </table>
     </section>
 
+    <section id="autor">
+        <h2 tabindex="0">Autor</h2>
+        <div class="autor-container">
+            <img src="resources/daniel_mera.jpeg" tabindex="0" alt="Foto de Daniel Mera">
+            <div class="autor-info">
+                <p tabindex="0"><strong>Nombre:</strong> Daniel Mera</p>
+                <p tabindex="0"><strong>Contacto:</strong> <a href="mailto:daniel.mera@epn.edu.ec">daniel.mera@epn.edu.ec</a></p>
+            </div>
+        </div>
+    </section>
+    
+
     <footer>
         <p tabindex="0">&copy; 2024 CustomCraft Figures por Daniel Mera - Todos los derechos reservados.</p>
     </footer>
